--- a/src/material-ui-colors.scss
+++ b/src/material-ui-colors.scss
@@ -1,3 +1,4 @@
+//  DON'T USE ME I am just a back up. i'm so stupid.
 // $material-color-red: #f44336;
 $material-color-blue-100: #bbdefb;
 $material-color-blue-200: #90caf9;
@@ -8,16 +9,20 @@ $material-color-blue-700: #1976d2;
 $material-color-blue-800: #1565c0;
 $material-color-blue-900: #0d47a1;
 $material-color-blue: #2196f3;
+
 $material-color-brown-700: #5d4037;
 $material-color-brown-800: #4e342e;
 $material-color-brown-900: #3e2723;
+
+
+$material-color-deep-orange: #ff5722;
 $material-color-deep-orange-100: #ffccbc;
 $material-color-deep-orange-200: #ffab91;
 $material-color-deep-orange-300: #ff8a65;
 $material-color-deep-orange-700: #e64a19;
 $material-color-deep-orange-800: #d84315;
 $material-color-deep-orange-900: #bf360c;
-$material-color-deep-orange: #ff5722;
+
 $material-color-green-700: #388e3c;
 $material-color-green-800: #2e7d32;
 $material-color-green-900: #1b5e20;
@@ -320,7 +325,6 @@ $material-color-deep-orange: #ff5722;
   --material-color-deep-orange-a900: #c02400;
   --material-color-deep-orange-a1000: #b42000;
 
-  --material-color-brown: #795548;
   --material-color-brown-50: #efebe9;
   --material-color-brown-100: #d7ccc8;
   --material-color-brown-200: #bcaaa4;
