--- a/src/shared/marionic-colors.scss
+++ b/src/shared/marionic-colors.scss
@@ -20,4 +20,9 @@ $bookSource: raw-colors.$material-color-indigo-900;
 $borderColor: raw-colors.$material-color-deep-orange;
 
 // #C6BAAD
-$unresolvedLinkColor: #C6BAAD
+$unresolvedLinkColor: #C6BAAD;
+
+$tertiary-blue-700: #111;
+$tertiary-blue-800: #112;
+$tertiary-blue-900: #114;
+$nbc: $tertiary-blue-800;
