--- a/src/shared/raw-colors.scss
+++ b/src/shared/raw-colors.scss
@@ -51,6 +51,8 @@ $tertiary-blue-800: #112;
 $tertiary-blue-900: #114;
 $tertiary-blue: $tertiary-blue-800;
 
+$material-color-brown: #795548;
+$material-color-brown-500: $material-color-brown;
 $material-color-brown-700: #5d4037;
 $material-color-brown-800: #4e342e;
 $material-color-brown-900: #3e2723;
