--- a/src/headers.scss
+++ b/src/headers.scss
@@ -87,7 +87,7 @@ $bar-color: MAT_COLORS.$material-color-blue-900;
     .HyperMD-header.HyperMD-header-1 {
       &.cm-line {
         @include orange-to-right-color();
-        border: 2px solid var(--material-color-brown-900);
+        border: 2px solid MAT_COLORS.$material-color-brown-900;
         color: var(--material-color-brown-50);
         padding: 0.2em 1em 0 1em;
         border-radius: 0.5em 1.8em 0.3em 0.5em;
