--- a/src/onering.scss
+++ b/src/onering.scss
@@ -53,7 +53,7 @@
   margin-bottom: 0;
 }
 %bg {
-  background-image: shared.$mm-image;
+  background-image: #{shared.$mm-image};
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: 100% 100%;
