--- a/src/plugin-stylings/index.scss
+++ b/src/plugin-stylings/index.scss
@@ -6,3 +6,5 @@
 @forward "./fountain.scss";
 @forward "./novel-word-count.scss";
 @forward "./file-explorer-note-count.scss";
+
+@forward "./slides.scss";
