--- a/src/shared/material-ui-colors.scss
+++ b/src/shared/material-ui-colors.scss
@@ -53,6 +53,9 @@ $material-color-pink-700: #c2185b;
 $material-color-pink-800: #ad1457;
 $material-color-pink-900: #880e4f;
 $material-color-pink: #e91e63;
+
+
+$material-color-deep-purple-200: #b39ddb;
 $material-color-purple-700: #7b1fa2;
 $material-color-purple-800: #6a1b9a;
 $material-color-purple-900: #4a148c;
