--- a/src/sliding-window/index.scss
+++ b/src/sliding-window/index.scss
@@ -1,9 +1,10 @@
+@use "../shared/index.scss" as shared;
 
 .workspace-tabs
 // .mod-top.mod-top-right-space 
 .workspace-leaf-content 
 .view-content .empty-state{
-  background-image: var(--bg-image);
+  background-image: shared.$bg-image;
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: 100% 100%;
@@ -13,7 +14,7 @@
 // .mod-top.mod-top-right-space 
 .workspace-leaf-content 
 .view-content .empty-state .empty-state-container{
-  background: var(--shade);
+  background: shared.$shade;
   border-radius: 1em 1em;
   padding: 1em .5em;
 }
