Import index from snippets to centralize css code and refactor

--- a/src/migration/index.scss
+++ b/src/migration/index.scss
@@ -1,1 +1,132 @@
-@forward "./marionic.scss"
+@forward "./marionic.scss";
+
+// for preview 
+.markdown-preview-view blockquote {
+  border: 2px solid;
+  border-color: var(--book-source) !important;
+  border-left-width: 2px !important;
+  border-radius: 8px 8px 8px 8px;
+  font-size: 15px;
+  line-height: 1.5em;
+  margin: 10px 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+
+.markdown-preview-view blockquote.paraphrase:after {
+  display: none;
+}
+
+/* .workspace-leaf-content
+  .floating-toc-div.floating-left
+  ~ .markdown-reading-view
+  .markdown-preview-view {
+  padding-left: 0.1em;
+} */
+
+
+/*** preview mode end****/
+
+/** : Transclusion/Embed sections */
+
+
+
+/* # UI Alias Helpers For Transcluded Content */
+/* ## Centering */
+.internal-embed[alt*="ui-center"].markdown-embed.inline-embed.is-loaded {
+  display: flex;
+  justify-content: center;
+}
+
+/* level 2 */
+/* 
+.markdown-source-view .cm-contentContainer {
+  border-radius: 1.5em 1.5em;
+  background: var(--shade);
+  min-height: 50vh;
+  margin: 0 1em;
+} */
+
+
+ /* # H1 styling Source */
+
+ /* ## H1 source view */
+ .markdown-source-view .cm-contentContainer .HyperMD-header.HyperMD-header-1.cm-line {
+  background: var(--material-color-deep-orange-800);
+  border: 2px solid var(--material-color-brown-900);
+  color: var(--material-color-brown-50);
+  padding: 0.2em 1em;
+  border-radius: 0.5em 1.8em 0.3em 0.5em;
+}
+
+/* ## H1 when there is a tag inside it.  */
+.markdown-source-view .cm-contentContainer .HyperMD-header.HyperMD-header-1.cm-line:has(> span.cm-hashtag) {
+  background: var(--material-color-indigo-900);
+  outline: 2px solid --material-color-deep-orange-300;
+}
+.markdown-source-view .cm-contentContainer .HyperMD-header.HyperMD-header-1.cm-line:has(> span.cm-hashtag) > span {
+  background-color: unset;;
+  color: var(--material-color-deep-orange-300);
+  /* font: small-caption; */
+}
+/* on hover blinks */
+.markdown-source-view .cm-contentContainer .HyperMD-header.HyperMD-header-1.cm-line:has(> span.cm-hashtag):hover > span {
+  background-color: unset;;
+  color: var(--material-color-deep-orange-200);
+  /* font: small-caption */
+}
+
+.markdown-reading-view .markdown-preview-sizer.markdown-preview-section h1[data-heading] > a.tag,
+.cm-contentContainer .HyperMD-header.HyperMD-header-1.cm-line > span ~ span {
+  border: unset;
+  padding: 0.05em 0.05em;
+  /* color: var(--tertiary-blue-900); */
+}
+.cm-contentContainer .HyperMD-header HyperMD-header-1.cm-line + .HyperMD-header.HyperMD-header-1.cm-line {
+  background: var(--material-color-deep-orange-800);
+  outline: 2px solid var(--material-color-brown-900);
+  /* color: var(--material-color-brown-50); */
+  color: var(--material-color-brown-50);
+  /* padding: 0.2em 1em; */
+  border-radius: 0.5em 1.8em 0.3em 0.5em;
+}
+
+
+
+
+/* # H1 styling */
+/* .markdown-preview-sizer.markdown-preview-section h1[data-heading="-"] {
+  background: var(--material-color-deep-orange-900) !important;
+}*/
+.markdown-source-view .markdown-embed-content .markdown-preview-sizer.markdown-preview-section h1[data-heading="="] {
+  outline: 2px solid var(--material-color-brown-700);
+  padding: 0.1em 2em;
+  color: var(--tertiary-blue-800);
+  border-radius: 0 0 50px 50px;
+} 
+
+/* note background blue glass color */
+.markdown-preview-sizer.markdown-preview-section h1[data-heading^="---"] {
+  border: 2px dashed var(--material-color-brown-700);
+  padding: 0.2em 3em;
+  border-radius: 0.5em 1.8em 0.3em 0.5em;
+}
+
+
+.is-flashing {
+  color: var(--warning);
+}
+.image-captions-caption {
+  padding: 1em 0;
+}
+
+/* # Bold Text in dark mode must be more visible */
+/* .theme-dark {
+  --bold-weight: 700;
+  --bold-color: var(--material-color-brown-300);
+}
+.theme-light {
+  --bold-color: #010f59;
+} */
+
