--- a/src/migration/other.scss
+++ b/src/migration/other.scss
@@ -1,4 +1,5 @@
-@use "./shared/index.scss" as shared;
+@use "../shared/index.scss" as shared;
+@use "../base-colors.scss" as BASE_COLORS;
 //What does this do again?
 .markdown-rendered {
   tbody {
@@ -42,7 +43,7 @@
   }
   // embeds
   .inline-embed .markdown-embed-content {
-    border: 1px solid $material-color-deep-purple-200;
+    border: 1px solid shared.$material-color-deep-purple-200;
     padding: 0 0.2em;
     border-radius: 0 1em 1em 0;
   }
@@ -84,14 +85,14 @@
         }
       }
       .tree-item.search-result:nth-child(2n + 1) {
-        background: $material-color-brown-900;
+        background: shared.$material-color-brown-900;
 
         // .search-result-file-matches {
         //   background: $material-color-purple-700
         // }
       }
       .tree-item.search-result:nth-child(2n) {
-        background: $material-color-purple-700;
+        background: shared.$material-color-purple-700;
         // .search-result-file-matches {
         //   background: $material-color-purple-700
         // }
@@ -102,7 +103,7 @@
 
 // floating highlights toc
 .heading-list-item.located .text-wrap:not(.located) .text {
-  color: var(--accent);
+  color: BASE_COLORS.$accent;
 }
 
 // H3 when bulletpoint
@@ -110,7 +111,7 @@
   .cm-contentContainer
   .HyperMD-list-line.HyperMD-list-line-1.cm-line
   span.cm-header.cm-header-3.cm-list-1 {
-  color: $material-color-yellow-a200 !important;
+  color: shared.$material-color-yellow-a200 !important;
 }
 
 // # buttons
@@ -120,8 +121,8 @@
     button {
       @include shared.orange-to-right-color(
         to right,
-        $material-color-brown-800,
-        $material-color-blue-800
+        shared.$material-color-brown-800,
+        shared.$material-color-blue-800
       );
       border: 1px solid shared.$button-border-color;
     }
