Fix type on var

--- a/src/experiments/progress-bar/progress-bar.scss
+++ b/src/experiments/progress-bar/progress-bar.scss
@@ -6,7 +6,7 @@
   appearance: none;
   height: 2em;
   width: 100%;
-  color: --var(--primary);
+  color: var(--primary);
 }
 
 .markdown-preview-view progress.mario-progress::-webkit-progress-bar,
