--- a/src/right-split-views.scss/index.scss
+++ b/src/right-split-views.scss/index.scss
@@ -13,7 +13,7 @@
 
           .workspace-leaf-content {
             li {
-              background: transparent;
+              // background: transparent;
             }
           }
         }
