--- a/src/shared/marionic-colors.scss
+++ b/src/shared/marionic-colors.scss
@@ -26,3 +26,4 @@ $tertiary-blue-700: #111;
 $tertiary-blue-800: #112;
 $tertiary-blue-900: #114;
 $nbc: $tertiary-blue-800;
+$shade: rgba(0,0,0,.8);
