--- a/src/shared/mixins.scss
+++ b/src/shared/mixins.scss
@@ -11,7 +11,7 @@
 }
 
 %notForMarkdownBackgroundImage {
-  background-image: WALLPAPERS.$midnight-grad;
+  background-image: #{WALLPAPERS.$midnight-grad};
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: 100% 100%;
