--- a/src/embed-blocks.scss
+++ b/src/embed-blocks.scss
@@ -20,7 +20,7 @@
   .block-language-dataview {
     border: 2px solid var(--material-color-deep-orange);
     border-radius: 1em 1em;
-    background: shared.$shade;
+    background: #{shared.$shade};
   }
 }
 
@@ -153,7 +153,7 @@ span[alt*="nlk"] {
     /* level 2 */
     // margin: 0 2em;
     border-radius: 1.5em 1.5em;
-    background: shared.$shade;
+    background: #{shared.$shade};
   }
 }
 
