--- a/src/left-split-views.scss/file-explorer.scss
+++ b/src/left-split-views.scss/file-explorer.scss
@@ -1,12 +1,11 @@
 @use "../shared/index.scss" as shared;
 
+// background-image: #{shared.$mm-image, shared.$anu-image};
 .nav-files-container {
   border-left: 1px solid shared.$material-color-orange-500;
-  background-image: #{shared.$midnight-grad, shared.$mm-image, shared.$anu-image};
-  background-attachment: fixed;
-  background-repeat: no-repeat;
+  @extend %fixed-bg;
   background-size: 100% 100%;
-  background-blend-mode: color;
+  // background-blend-mode: color;
   contain: paint;
 }
 
