--- a/src/right-split-views.scss/right-split.scss
+++ b/src/right-split-views.scss/right-split.scss
@@ -34,7 +34,8 @@
           .workspace-leaf-content {
             .view-content {
               > :is(div:nth-of-type(2), div:nth-of-type(1)) {
-                background: rgba(0, 0, 0, 0.8);
+                // background: rgba(0, 0, 0, 0.8);
+                background: shared.$shade;
               }
             }
           }
