--- a/src/shared/material-ui-colors.scss
+++ b/src/shared/material-ui-colors.scss
@@ -75,6 +75,7 @@ $material-color-yellow-300: #fff176;
 $material-color-yellow-700: #fbc02d;
 $material-color-yellow-800: #f9a825;
 $material-color-yellow-900: #f57f17;
+$material-color-yellow-a200: #ff0;
 
 $material-color-amber-a400: #ffc400;
 
