--- a/src/left-split-views.scss/file-explorer.scss
+++ b/src/left-split-views.scss/file-explorer.scss
@@ -1,12 +1,12 @@
 @use "../shared/index.scss" as shared;
 
-// background-image: #{shared.$mm-image, shared.$anu-image};
 .nav-files-container {
   border-left: 1px solid shared.$material-color-orange-500;
   @extend %fixed-bg;
+  background-image: #{shared.$midnight-grad};
   background-size: 100% 100%;
   // background-blend-mode: color;
-  contain: paint;
+  // contain: paint;
 }
 
 /* NAV FILE EXPLORER BACKDROP */
