--- a/src/onering.scss
+++ b/src/onering.scss
@@ -4,13 +4,12 @@
 
 @import "./material-ui-colors.scss";
 
-@import "./multi-colored-folders.scss";
+// @import "./multi-colored-folders.scss";
 @import "./statusbar.scss";
 @import "./tab-bar";
 @import "./embed-blocks";
 @import "./headers";
 @import "./embedded-headers.scss";
-
 
 @import "./right-split-views.scss/index.scss";
 @import "./left-split-views.scss/index.scss";
@@ -26,8 +25,6 @@
 @import "./frontmatter/index.scss";
 @import "./sliding-window/index.scss";
 
-
 @import "./migration/index.scss"; // here's where all the basic uses are;
 // # backrounds
 // @import "./migration/index.scss"; // migration of old scss be careful of using index
-
